Fixed spacing in booking

--- a/src/scss/abstracts/fonts.scss
+++ b/src/scss/abstracts/fonts.scss
@@ -19,6 +19,7 @@ h2 {
 }
 
 h3 {
+  font-size: clamp(1.15rem, 1.5vw, 2rem);
   // display: flex;
   font-family: $font-headings;
   font-weight: 500;
@@ -26,7 +27,7 @@ h3 {
 
 h4 {
   font-size: 1rem;
-  padding-top: 2.375rem;
+  padding-top: 1.375rem;
   padding-bottom: 0;
 }
 
