--- a/src/scss/components/card.scss
+++ b/src/scss/components/card.scss
@@ -134,7 +134,7 @@
   margin-inline: 1.5rem;
   transition: transform 0.5s ease-in-out;
   position: relative;
-
+  height: 60vh;
   & h3 {
     padding: 1rem;
     background-color: $surface-color;
@@ -147,6 +147,7 @@
       padding: 0.5rem;
       margin: 0;
       width: -webkit-fill-available;
+      height: 60vh;
     }
   }
 
