--- a/src/scss/components/slider.scss
+++ b/src/scss/components/slider.scss
@@ -63,6 +63,7 @@
 }
 
 .indicator {
+  padding-top: 0.5rem;
   display: flex;
   align-items: center;
   :first-child {
