--- a/src/scss/utils/containers.scss
+++ b/src/scss/utils/containers.scss
@@ -8,8 +8,7 @@
 .block-padded {
   padding-block: 1rem;
 }
-
-.more-inline {
+containerscontainers .more-inline {
   @media only screen and (min-width: 1200px) {
     padding-inline: 25vw;
   }
@@ -86,7 +85,6 @@
 .grid-4-col {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
   @media only screen and (min-width: 768px) {
     display: grid;
     grid-template-columns: repeat(2, auto);
